--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,8 @@ nav ul li a:hover {
 
 .hero {
     text-align: center;
-    padding: 200px;
+    padding-top: 180px;
+    padding-bottom: 250px;
     padding-left: 0px;
     padding-right: 0px;
     background-color: var(--hero-bg-color);
